chore(mobile) : expo upgrade sdk 52 🚀 (#15383)
* chore: expo upgrade

* chore(mobile): expo sdk 52

* fix: android build

* chore(mobile): ⬆️ upgrade usb lib, jest, sentry

* fix(mobile): fix quick crypto android build

--- a/suite-native/helpers/package.json
+++ b/suite-native/helpers/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "@mobily/ts-belt": "^3.13.1",
         "@suite-native/toasts": "workspace:*",
-        "expo-clipboard": "6.0.3",
+        "expo-clipboard": "^7.0.0",
         "react": "18.2.0"
     }
 }
