--- a/suite-native/module-onboarding/package.json
+++ b/suite-native/module-onboarding/package.json
@@ -26,8 +26,8 @@
         "@suite-native/theme": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
-        "react-native": "0.75.2",
-        "react-native-svg": "15.6.0",
+        "react-native": "0.76.1",
+        "react-native-svg": "^15.9.0",
         "react-redux": "8.0.7"
     }
 }
