--- a/suite-native/coin-enabling/package.json
+++ b/suite-native/coin-enabling/package.json
@@ -28,11 +28,11 @@
         "@suite-native/toasts": "workspace:*",
         "@suite-native/tokens": "workspace:*",
         "@trezor/styles": "workspace:*",
-        "expo-linear-gradient": "13.0.2",
+        "expo-linear-gradient": "^14.0.1",
         "react": "18.2.0",
-        "react-native": "0.75.2",
+        "react-native": "0.76.1",
         "react-native-reanimated": "3.16.1",
-        "react-native-svg": "15.6.0",
+        "react-native-svg": "^15.9.0",
         "react-redux": "8.0.7"
     }
 }
