--- a/suite-native/device-manager/package.json
+++ b/suite-native/device-manager/package.json
@@ -29,9 +29,9 @@
         "@trezor/theme": "workspace:*",
         "jotai": "1.9.1",
         "react": "^18.2.0",
-        "react-native": "0.75.2",
+        "react-native": "0.76.1",
         "react-native-reanimated": "3.16.1",
-        "react-native-safe-area-context": "4.10.9",
+        "react-native-safe-area-context": "^4.14.0",
         "react-redux": "8.0.7"
     }
 }
