--- a/suite-native/module-accounts-import/package.json
+++ b/suite-native/module-accounts-import/package.json
@@ -16,8 +16,8 @@
         "@react-navigation/native": "6.1.18",
         "@react-navigation/native-stack": "6.11.0",
         "@reduxjs/toolkit": "1.9.5",
-        "@shopify/flash-list": "1.7.1",
-        "@shopify/react-native-skia": "1.3.11",
+        "@shopify/flash-list": "^1.7.2",
+        "@shopify/react-native-skia": "^1.5.3",
         "@suite-common/redux-utils": "workspace:*",
         "@suite-common/suite-config": "workspace:*",
         "@suite-common/token-definitions": "workspace:*",
@@ -45,7 +45,7 @@
         "@trezor/styles": "workspace:*",
         "@trezor/utxo-lib": "workspace:*",
         "react": "18.2.0",
-        "react-native": "0.75.2",
+        "react-native": "0.76.1",
         "react-native-reanimated": "3.16.1",
         "react-redux": "8.0.7"
     }
