--- a/suite-native/module-add-accounts/package.json
+++ b/suite-native/module-add-accounts/package.json
@@ -27,10 +27,10 @@
         "@suite-native/link": "workspace:*",
         "@suite-native/navigation": "workspace:*",
         "@trezor/styles": "workspace:*",
-        "expo-linear-gradient": "13.0.2",
+        "expo-linear-gradient": "^14.0.1",
         "react": "18.2.0",
-        "react-native": "0.75.2",
-        "react-native-safe-area-context": "4.10.9",
+        "react-native": "0.76.1",
+        "react-native-safe-area-context": "^4.14.0",
         "react-redux": "8.0.7"
     }
 }
