--- a/suite-native/module-authorize-device/package.json
+++ b/suite-native/module-authorize-device/package.json
@@ -34,9 +34,9 @@
         "@trezor/env-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
-        "react-native": "0.75.2",
+        "react-native": "0.76.1",
         "react-native-reanimated": "3.16.1",
-        "react-native-svg": "15.6.0",
+        "react-native-svg": "^15.9.0",
         "react-redux": "8.0.7"
     }
 }
