--- a/suite-native/module-home/package.json
+++ b/suite-native/module-home/package.json
@@ -34,8 +34,8 @@
         "@trezor/styles": "workspace:*",
         "jotai": "1.9.1",
         "react": "18.2.0",
-        "react-native": "0.75.2",
-        "react-native-svg": "15.6.0",
+        "react-native": "0.76.1",
+        "react-native-svg": "^15.9.0",
         "react-redux": "8.0.7"
     }
 }
