--- a/suite-native/module-settings/package.json
+++ b/suite-native/module-settings/package.json
@@ -44,11 +44,11 @@
         "@trezor/env-utils": "workspace:*",
         "@trezor/styles": "workspace:*",
         "@trezor/theme": "workspace:*",
-        "expo-linear-gradient": "13.0.2",
+        "expo-linear-gradient": "^14.0.1",
         "jotai": "1.9.1",
         "react": "18.2.0",
-        "react-native": "0.75.2",
-        "react-native-svg": "15.6.0",
+        "react-native": "0.76.1",
+        "react-native-svg": "^15.9.0",
         "react-redux": "8.0.7"
     }
 }
