--- a/suite-native/notifications/package.json
+++ b/suite-native/notifications/package.json
@@ -24,8 +24,8 @@
         "@suite-native/transactions": "workspace:*",
         "@trezor/styles": "workspace:*",
         "react": "18.2.0",
-        "react-native": "0.75.2",
-        "react-native-gesture-handler": "2.18.1",
+        "react-native": "0.76.1",
+        "react-native-gesture-handler": "^2.21.0",
         "react-native-reanimated": "3.16.1",
         "react-redux": "8.0.7"
     }
