chore: make warrning from ESLint to fail the tests (non-zero exit code)

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
         "type-check": "yarn nx run-many --target=type-check",
         "type-check:force": "rimraf -rf -- **/libDev && yarn type-check",
         "test:unit": "yarn nx run-many --target=test:unit",
-        "lint:js": "eslint . --cache --cache-strategy content --flag unstable_config_lookup_from_file",
+        "lint:js": "eslint . --cache --cache-strategy content --flag unstable_config_lookup_from_file --max-warnings 0",
         "lint:styles": "yarn nx run-many --target=lint:styles",
         "lint": "yarn lint:styles && yarn lint:js",
         "lint-staged": "npx lint-staged",
         "lint:shellcheck": "./scripts/shellcheck.sh",
         "_______ Global Scripts _______": "Shared scripts for running in all workspaces",
-        "g:eslint": "cd $INIT_CWD && eslint . --cache --cache-strategy content --flag unstable_config_lookup_from_file",
+        "g:eslint": "cd $INIT_CWD && eslint . --cache --cache-strategy content --flag unstable_config_lookup_from_file --max-warnings 0",
         "g:jest": "cd $INIT_CWD && jest",
         "g:prettier": "cd $INIT_CWD && prettier",
         "g:rimraf": "cd $INIT_CWD && rimraf",
