ci(suite-web): run tests for changes in connect core

--- a/.github/workflows/test-suite-web-e2e.yml
+++ b/.github/workflows/test-suite-web-e2e.yml
@@ -16,7 +16,17 @@ on:
       - "packages/suite-desktop*/**"
       - "packages/react-native-usb/**"
       # ignore unrelated github workflows config files
-      - ".github/workflows/connect*"
+      - ".github/workflows/connect-analytics"
+      - ".github/workflows/connect-common"
+      - ".github/workflows/connect-examples"
+      - ".github/workflows/connect-explorer"
+      - ".github/workflows/connect-iframe"
+      - ".github/workflows/connect-mobile"
+      - ".github/workflows/connect-plugin-*"
+      - ".github/workflows/connect-popup"
+      - ".github/workflows/connect-theme"
+      - ".github/workflows/connect-ui"
+      - ".github/workflows/connect-webextension"
       - ".github/workflows/suite-native*"
       - ".github/workflows/build-desktop*"
       - ".github/workflows/release*"
