feat(suite-web): use data.trezor.io for FW hash check

--- a/suite-common/connect-init/package.json
+++ b/suite-common/connect-init/package.json
@@ -14,12 +14,12 @@
         "@reduxjs/toolkit": "1.9.5",
         "@suite-common/redux-utils": "workspace:*",
         "@suite-common/suite-types": "workspace:*",
-        "@suite-common/suite-utils": "workspace:^",
         "@suite-common/test-utils": "workspace:*",
         "@suite-common/wallet-core": "workspace:*",
         "@trezor/connect": "workspace:*",
         "@trezor/env-utils": "workspace:^",
         "@trezor/suite-desktop-api": "workspace:*",
+        "@trezor/urls": "workspace:*",
         "@trezor/utils": "workspace:*"
     },
     "devDependencies": {
