--- a/suite-common/connect-init/tsconfig.json
+++ b/suite-common/connect-init/tsconfig.json
@@ -4,7 +4,6 @@
     "references": [
         { "path": "../redux-utils" },
         { "path": "../suite-types" },
-        { "path": "../suite-utils" },
         { "path": "../test-utils" },
         { "path": "../wallet-core" },
         { "path": "../../packages/connect" },
@@ -12,6 +11,7 @@
         {
             "path": "../../packages/suite-desktop-api"
         },
+        { "path": "../../packages/urls" },
         { "path": "../../packages/utils" }
     ]
 }
