feat(message-system): turn off FW hash check

--- a/suite-common/message-system/config/config.v1.json
+++ b/suite-common/message-system/config/config.v1.json
@@ -1,7 +1,7 @@
 {
     "version": 1,
-    "timestamp": "2024-11-20T00:00:00+00:00",
-    "sequence": 65,
+    "timestamp": "2024-11-22T00:00:00+00:00",
+    "sequence": 66,
     "actions": [
         {
             "conditions": [
@@ -1185,6 +1185,45 @@
                         "uk": "Перевірити резервну копію гаманця"
                     }
                 }
+            }
+        },
+        {
+            "conditions": [
+                {
+                    "environment": {
+                        "desktop": ">=24.10.1",
+                        "mobile": "!",
+                        "web": ">=24.10.1"
+                    }
+                }
+            ],
+            "message": {
+                "id": "f10a4296-7f58-4cb4-91b0-13aa66c4d701",
+                "priority": 1,
+                "dismissible": false,
+                "variant": "info",
+                "category": "feature",
+                "content": {
+                    "en-GB": "Placeholder",
+                    "en": "Placeholder",
+                    "es": "Placeholder",
+                    "cs": "Placeholder",
+                    "de": "Placeholder",
+                    "fr": "Placeholder",
+                    "it": "Placeholder",
+                    "pt": "Placeholder",
+                    "tr": "Placeholder",
+                    "ru": "Placeholder",
+                    "ja": "Placeholder",
+                    "uk": "Placeholder",
+                    "hu": "Placeholder"
+                },
+                "feature": [
+                    {
+                        "domain": "security.firmware.hashCheck",
+                        "flag": false
+                    }
+                ]
             }
         }
     ]
