chore: Port `@trezor/blockchain-link` to `@solana/web3.js` v2
1. Added an RPC subscriptions instance to the `API` type
2. Added code to throw in the event that the transaction is a durable nonce transaction. A little extra work would have to be done to import and construct the durable nonce transaction confirmer.
3. Added a `FIXME` explaining why it would be better to save the `lastValidBlockhash` at the time the transaction was first given a blockhash lifetime, instead of fetching a too-new one in `pushTransaction`
4. Eliminated all of the custom transaction confirmation code, in favour of the new built-in routines.
5. Added a `FIXME` to note that the `fetch()` API typically doesn't allow you to override the `Origin` header. I didn't test whether your runtime actually allows it or not.

Note that all RPC methods are now cancellable via `AbortController`, if you supply an `AbortSignal` to the send/subscribe methods (ie. `.send({ abortSignal })`)

--- a/packages/blockchain-link/package.json
+++ b/packages/blockchain-link/package.json
@@ -76,6 +76,7 @@
         "worker-loader": "^3.0.8"
     },
     "dependencies": {
+        "@solana-program/token": "^0.4.1",
         "@solana/web3.js": "^2.0.0",
         "@trezor/blockchain-link-types": "workspace:*",
         "@trezor/blockchain-link-utils": "workspace:*",
