--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -85,7 +85,6 @@
         "@trezor/trezor-user-env-link": "workspace:*",
         "buffer": "^6.0.3",
         "expo": "^52.0.4",
-        "expo-av": "^15.0.1",
         "expo-build-properties": "^0.13.1",
         "expo-camera": "^16.0.4",
         "expo-clipboard": "^7.0.0",
@@ -102,6 +101,7 @@
         "expo-status-bar": "^2.0.0",
         "expo-system-ui": "^4.0.2",
         "expo-updates": "0.26.6",
+        "expo-video": "^2.0.1",
         "lottie-react-native": "^7.1.0",
         "node-libs-browser": "^2.2.1",
         "react": "18.2.0",
