--- a/suite-native/video-assets/package.json
+++ b/suite-native/video-assets/package.json
@@ -13,9 +13,11 @@
     },
     "dependencies": {
         "@trezor/styles": "workspace:*",
-        "expo-av": "^15.0.1",
+        "expo": "^52.0.4",
+        "expo-video": "^2.0.1",
         "prettier": "^3.3.2",
         "react": "18.2.0",
-        "react-native": "0.76.1"
+        "react-native": "0.76.1",
+        "react-native-reanimated": "3.16.1"
     }
 }
