--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -84,7 +84,7 @@
         "@trezor/theme": "workspace:*",
         "@trezor/trezor-user-env-link": "workspace:*",
         "buffer": "^6.0.3",
-        "expo": "^52.0.4",
+        "expo": "52.0.11",
         "expo-build-properties": "^0.13.1",
         "expo-camera": "^16.0.4",
         "expo-clipboard": "^7.0.0",
@@ -97,7 +97,7 @@
         "expo-localization": "^16.0.0",
         "expo-navigation-bar": "^4.0.2",
         "expo-secure-store": "^14.0.0",
-        "expo-splash-screen": "^0.29.7",
+        "expo-splash-screen": "^0.29.13",
         "expo-status-bar": "^2.0.0",
         "expo-system-ui": "^4.0.2",
         "expo-updates": "0.26.6",
