--- a/suite-native/app/package.json
+++ b/suite-native/app/package.json
@@ -83,7 +83,10 @@
         "@trezor/styles": "workspace:*",
         "@trezor/theme": "workspace:*",
         "@trezor/trezor-user-env-link": "workspace:*",
+        "@whatwg-node/events": "0.1.2",
+        "abortcontroller-polyfill": "1.7.6",
         "buffer": "^6.0.3",
+        "event-target-shim": "6.0.2",
         "expo": "52.0.11",
         "expo-build-properties": "^0.13.1",
         "expo-camera": "^16.0.4",
