feat(solana): add support for Token-2022 tokens

--- a/packages/blockchain-link/package.json
+++ b/packages/blockchain-link/package.json
@@ -77,6 +77,7 @@
     },
     "dependencies": {
         "@solana-program/token": "^0.4.1",
+        "@solana-program/token-2022": "^0.3.1",
         "@solana/web3.js": "^2.0.0",
         "@trezor/blockchain-link-types": "workspace:*",
         "@trezor/blockchain-link-utils": "workspace:*",
