--- a/suite-native/biometrics/package.json
+++ b/suite-native/biometrics/package.json
@@ -20,6 +20,7 @@
         "expo-local-authentication": "14.0.1",
         "jotai": "1.9.1",
         "react": "18.2.0",
-        "react-native": "0.76.1"
+        "react-native": "0.76.1",
+        "react-native-svg": "15.9.0"
     }
 }
