--- a/suite-native/transactions/package.json
+++ b/suite-native/transactions/package.json
@@ -42,6 +42,7 @@
         "react-native": "0.76.1",
         "react-native-gesture-handler": "^2.21.0",
         "react-native-reanimated": "3.16.1",
+        "react-native-svg": "15.9.0",
         "react-redux": "8.0.7"
     }
 }
