feat(mobile): firmware upgrade (#15184)
* fix(connect): make fetch work in react native

* refactor(suite): move FW upgrade logic to common package

* feat(mobile): make some atoms easily animatable

* feat(mobile): firmware upgrade

* fix: formatting and deps

* refactor(suite): map operation to translation ID

* refactor(suite): add transport selectors

* refactor(suite): remove useFirmware hook

* chore: bug fixes

---------

Co-authored-by: Jan Komarek <jan.komarek@satoshilabs.com>

--- a/packages/suite/tsconfig.json
+++ b/packages/suite/tsconfig.json
@@ -25,6 +25,7 @@
         {
             "path": "../../suite-common/fiat-services"
         },
+        { "path": "../../suite-common/firmware" },
         {
             "path": "../../suite-common/formatters"
         },
