--- a/packages/suite/package.json
+++ b/packages/suite/package.json
@@ -32,6 +32,7 @@
         "@suite-common/connect-init": "workspace:*",
         "@suite-common/device-authenticity": "workspace:*",
         "@suite-common/fiat-services": "workspace:*",
+        "@suite-common/firmware": "workspace:*",
         "@suite-common/formatters": "workspace:*",
         "@suite-common/icons": "workspace:*",
         "@suite-common/intl-types": "workspace:*",
