--- a/suite-native/state/package.json
+++ b/suite-native/state/package.json
@@ -13,6 +13,7 @@
         "@reduxjs/toolkit": "1.9.5",
         "@sentry/react-native": "6.1.0",
         "@suite-common/analytics": "workspace:*",
+        "@suite-common/firmware": "workspace:*",
         "@suite-common/logger": "workspace:*",
         "@suite-common/message-system": "workspace:*",
         "@suite-common/redux-utils": "workspace:*",
@@ -25,6 +26,7 @@
         "@suite-native/device-authorization": "workspace:*",
         "@suite-native/discovery": "workspace:*",
         "@suite-native/feature-flags": "workspace:*",
+        "@suite-native/firmware": "workspace:*",
         "@suite-native/graph": "workspace:*",
         "@suite-native/message-system": "workspace:*",
         "@suite-native/module-send": "workspace:*",
@@ -37,6 +39,10 @@
         "react-native": "0.76.1",
         "react-redux": "8.0.7",
         "redux-devtools-expo-dev-plugin": "^0.1.0",
+        "redux-logger": "^3.0.6",
         "redux-persist": "6.0.0"
+    },
+    "devDependencies": {
+        "@types/redux-logger": "^3.0.11"
     }
 }
